lib/parser/parser.output

state 0
	$accept: .program $end 
	program: .    (1)

	VARIABLE  shift 41
	SELECT  shift 39
	UPDATE  shift 18
	SET  shift 34
	DELETE  shift 19
	INSERT  shift 17
	CREATE  shift 20
	ALTER  shift 21
	IF  shift 31
	WHILE  shift 32
	DECLARE  shift 26
	FETCH  shift 30
	OPEN  shift 27
	CLOSE  shift 28
	DISPOSE  shift 29
	COMMIT  shift 24
	ROLLBACK  shift 25
	EXIT  shift 33
	PRINT  shift 35
	VAR  shift 22
	'('  shift 42
	.  reduce 1 (src line 145)

	program  goto 1
	statement  goto 2
	variable_statement  goto 11
	transaction_statement  goto 12
	cursor_statement  goto 13
	flow_control_statement  goto 14
	command_statement  goto 15
	select_query  goto 3
	select_entity  goto 16
	select_set_entity  goto 37
	select_clause  goto 36
	subquery  goto 40
	insert_query  goto 4
	update_query  goto 5
	delete_query  goto 6
	create_table  goto 7
	add_columns  goto 8
	drop_columns  goto 9
	rename_column  goto 10
	variable  goto 38
	variable_substitution  goto 23

state 1
	$accept:  program.$end 

	$end  accept
	.  error


state 2
	program:  statement.program 
	program: .    (1)

	VARIABLE  shift 41
	SELECT  shift 39
	UPDATE  shift 18
	SET  shift 34
	DELETE  shift 19
	INSERT  shift 17
	CREATE  shift 20
	ALTER  shift 21
	IF  shift 31
	WHILE  shift 32
	DECLARE  shift 26
	FETCH  shift 30
	OPEN  shift 27
	CLOSE  shift 28
	DISPOSE  shift 29
	COMMIT  shift 24
	ROLLBACK  shift 25
	EXIT  shift 33
	PRINT  shift 35
	VAR  shift 22
	'('  shift 42
	.  reduce 1 (src line 145)

	program  goto 43
	statement  goto 2
	variable_statement  goto 11
	transaction_statement  goto 12
	cursor_statement  goto 13
	flow_control_statement  goto 14
	command_statement  goto 15
	select_query  goto 3
	select_entity  goto 16
	select_set_entity  goto 37
	select_clause  goto 36
	subquery  goto 40
	insert_query  goto 4
	update_query  goto 5
	delete_query  goto 6
	create_table  goto 7
	add_columns  goto 8
	drop_columns  goto 9
	rename_column  goto 10
	variable  goto 38
	variable_substitution  goto 23

state 3
	statement:  select_query.statement_terminal 
	statement_terminal: .    (225)

	';'  shift 45
	.  reduce 225 (src line 1267)

	statement_terminal  goto 44

state 4
	statement:  insert_query.statement_terminal 
	statement_terminal: .    (225)

	';'  shift 45
	.  reduce 225 (src line 1267)

	statement_terminal  goto 46

state 5
	statement:  update_query.statement_terminal 
	statement_terminal: .    (225)

	';'  shift 45
	.  reduce 225 (src line 1267)

	statement_terminal  goto 47

state 6
	statement:  delete_query.statement_terminal 
	statement_terminal: .    (225)

	';'  shift 45
	.  reduce 225 (src line 1267)

	statement_terminal  goto 48

state 7
	statement:  create_table.statement_terminal 
	statement_terminal: .    (225)

	';'  shift 45
	.  reduce 225 (src line 1267)

	statement_terminal  goto 49

state 8
	statement:  add_columns.statement_terminal 
	statement_terminal: .    (225)

	';'  shift 45
	.  reduce 225 (src line 1267)

	statement_terminal  goto 50

state 9
	statement:  drop_columns.statement_terminal 
	statement_terminal: .    (225)

	';'  shift 45
	.  reduce 225 (src line 1267)

	statement_terminal  goto 51

state 10
	statement:  rename_column.statement_terminal 
	statement_terminal: .    (225)

	';'  shift 45
	.  reduce 225 (src line 1267)

	statement_terminal  goto 52

state 11
	statement:  variable_statement.    (13)

	.  reduce 13 (src line 202)


state 12
	statement:  transaction_statement.    (14)

	.  reduce 14 (src line 206)


state 13
	statement:  cursor_statement.    (15)

	.  reduce 15 (src line 210)


state 14
	statement:  flow_control_statement.    (16)

	.  reduce 16 (src line 214)


state 15
	statement:  command_statement.    (17)

	.  reduce 17 (src line 218)


state 16
	select_query:  select_entity.order_by_clause limit_clause 
	select_set_entity:  select_entity.    (45)
	order_by_clause: .    (56)

	ORDER  shift 54
	UNION  reduce 45 (src line 374)
	INTERSECT  reduce 45 (src line 374)
	EXCEPT  reduce 45 (src line 374)
	.  reduce 56 (src line 430)

	order_by_clause  goto 53

state 17
	insert_query:  INSERT.INTO identifier VALUES insert_values_list 
	insert_query:  INSERT.INTO identifier '(' field_references ')' VALUES insert_values_list 
	insert_query:  INSERT.INTO identifier select_query 
	insert_query:  INSERT.INTO identifier '(' field_references ')' select_query 

	INTO  shift 55
	.  error


state 18
	update_query:  UPDATE.identified_tables SET update_set_list from_clause where_clause 

	IDENTIFIER  shift 59
	.  error

	identified_table  goto 57
	identified_tables  goto 56
	identifier  goto 58

state 19
	delete_query:  DELETE.FROM tables where_clause 
	delete_query:  DELETE.identified_tables FROM tables where_clause 

	IDENTIFIER  shift 59
	FROM  shift 60
	.  error

	identified_table  goto 57
	identified_tables  goto 61
	identifier  goto 58

state 20
	create_table:  CREATE.TABLE identifier '(' using_fields ')' 

	TABLE  shift 62
	.  error


state 21
	add_columns:  ALTER.TABLE identifier ADD column_default column_position 
	add_columns:  ALTER.TABLE identifier ADD '(' column_defaults ')' column_position 
	drop_columns:  ALTER.TABLE identifier DROP field_reference 
	drop_columns:  ALTER.TABLE identifier DROP '(' field_references ')' 
	rename_column:  ALTER.TABLE identifier RENAME field_reference TO identifier 

	TABLE  shift 63
	.  error


state 22
	variable_statement:  VAR.variable_assignments statement_terminal 

	VARIABLE  shift 66
	.  error

	variable_assignment  goto 65
	variable_assignments  goto 64

state 23
	variable_statement:  variable_substitution.statement_terminal 
	statement_terminal: .    (225)

	';'  shift 45
	.  reduce 225 (src line 1267)

	statement_terminal  goto 67

state 24
	transaction_statement:  COMMIT.statement_terminal 
	statement_terminal: .    (225)

	';'  shift 45
	.  reduce 225 (src line 1267)

	statement_terminal  goto 68

state 25
	transaction_statement:  ROLLBACK.statement_terminal 
	statement_terminal: .    (225)

	';'  shift 45
	.  reduce 225 (src line 1267)

	statement_terminal  goto 69

state 26
	cursor_statement:  DECLARE.identifier CURSOR FOR select_query statement_terminal 

	IDENTIFIER  shift 59
	.  error

	identifier  goto 70

state 27
	cursor_statement:  OPEN.identifier statement_terminal 

	IDENTIFIER  shift 59
	.  error

	identifier  goto 71

state 28
	cursor_statement:  CLOSE.identifier statement_terminal 

	IDENTIFIER  shift 59
	.  error

	identifier  goto 72

state 29
	cursor_statement:  DISPOSE.identifier statement_terminal 

	IDENTIFIER  shift 59
	.  error

	identifier  goto 73

state 30
	cursor_statement:  FETCH.identifier INTO variables statement_terminal 

	IDENTIFIER  shift 59
	.  error

	identifier  goto 74

state 31
	flow_control_statement:  IF.value THEN program else END IF statement_terminal 
	flow_control_statement:  IF.value THEN program elseif else END IF statement_terminal 

	IDENTIFIER  shift 59
	STRING  shift 99
	INTEGER  shift 100
	FLOAT  shift 102
	TERNARY  shift 103
	DATETIME  shift 104
	VARIABLE  shift 41
	EXISTS  shift 97
	NOT  shift 98
	NULL  shift 105
	CASE  shift 96
	GROUP_CONCAT  shift 106
	'-'  shift 101
	'('  shift 87
	.  error

	primary  goto 77
	field_reference  goto 76
	value  goto 75
	subquery  goto 80
	string_operation  goto 79
	comparison  goto 83
	arithmetic  goto 78
	logic  goto 84
	function  goto 81
	group_concat  goto 95
	case  goto 82
	identifier  goto 88
	text  goto 89
	integer  goto 90
	float  goto 91
	ternary  goto 92
	datetime  goto 93
	null  goto 94
	variable  goto 85
	variable_substitution  goto 86

state 32
	flow_control_statement:  WHILE.value DO in_loop_program END WHILE statement_terminal 
	flow_control_statement:  WHILE.variables IN identifier DO in_loop_program END WHILE statement_terminal 

	IDENTIFIER  shift 59
	STRING  shift 99
	INTEGER  shift 100
	FLOAT  shift 102
	TERNARY  shift 103
	DATETIME  shift 104
	VARIABLE  shift 41
	EXISTS  shift 97
	NOT  shift 98
	NULL  shift 105
	CASE  shift 96
	GROUP_CONCAT  shift 106
	'-'  shift 101
	'('  shift 87
	.  error

	primary  goto 77
	field_reference  goto 76
	value  goto 107
	subquery  goto 80
	string_operation  goto 79
	comparison  goto 83
	arithmetic  goto 78
	logic  goto 84
	function  goto 81
	group_concat  goto 95
	case  goto 82
	identifier  goto 88
	text  goto 89
	integer  goto 90
	float  goto 91
	ternary  goto 92
	datetime  goto 93
	null  goto 94
	variable  goto 109
	variables  goto 108
	variable_substitution  goto 86

state 33
	flow_control_statement:  EXIT.statement_terminal 
	statement_terminal: .    (225)

	';'  shift 45
	.  reduce 225 (src line 1267)

	statement_terminal  goto 110

state 34
	command_statement:  SET.FLAG '=' primary statement_terminal 

	FLAG  shift 111
	.  error


state 35
	command_statement:  PRINT.value statement_terminal 

	IDENTIFIER  shift 59
	STRING  shift 99
	INTEGER  shift 100
	FLOAT  shift 102
	TERNARY  shift 103
	DATETIME  shift 104
	VARIABLE  shift 41
	EXISTS  shift 97
	NOT  shift 98
	NULL  shift 105
	CASE  shift 96
	GROUP_CONCAT  shift 106
	'-'  shift 101
	'('  shift 87
	.  error

	primary  goto 77
	field_reference  goto 76
	value  goto 112
	subquery  goto 80
	string_operation  goto 79
	comparison  goto 83
	arithmetic  goto 78
	logic  goto 84
	function  goto 81
	group_concat  goto 95
	case  goto 82
	identifier  goto 88
	text  goto 89
	integer  goto 90
	float  goto 91
	ternary  goto 92
	datetime  goto 93
	null  goto 94
	variable  goto 85
	variable_substitution  goto 86

state 36
	select_entity:  select_clause.from_clause where_clause group_by_clause having_clause 
	from_clause: .    (48)

	FROM  shift 114
	.  reduce 48 (src line 390)

	from_clause  goto 113

state 37
	select_entity:  select_set_entity.UNION all select_set_entity 
	select_entity:  select_set_entity.INTERSECT all select_set_entity 
	select_entity:  select_set_entity.EXCEPT all select_set_entity 

	UNION  shift 115
	INTERSECT  shift 116
	EXCEPT  shift 117
	.  error


state 38
	variable_substitution:  variable.SUBSTITUTION_OP value 

	SUBSTITUTION_OP  shift 118
	.  error


state 39
	select_clause:  SELECT.distinct fields 
	distinct: .    (209)

	DISTINCT  shift 120
	.  reduce 209 (src line 1189)

	distinct  goto 119

state 40
	select_set_entity:  subquery.    (46)

	.  reduce 46 (src line 379)


state 41
	variable:  VARIABLE.    (201)

	.  reduce 201 (src line 1147)


state 42
	subquery:  '('.select_query ')' 

	SELECT  shift 39
	'('  shift 42
	.  error

	select_query  goto 121
	select_entity  goto 16
	select_set_entity  goto 37
	select_clause  goto 36
	subquery  goto 40

state 43
	program:  statement program.    (2)

	.  reduce 2 (src line 151)


state 44
	statement:  select_query statement_terminal.    (5)

	.  reduce 5 (src line 169)


state 45
	statement_terminal:  ';'.    (226)

	.  reduce 226 (src line 1272)


state 46
	statement:  insert_query statement_terminal.    (6)

	.  reduce 6 (src line 174)


state 47
	statement:  update_query statement_terminal.    (7)

	.  reduce 7 (src line 178)


state 48
	statement:  delete_query statement_terminal.    (8)

	.  reduce 8 (src line 182)


state 49
	statement:  create_table statement_terminal.    (9)

	.  reduce 9 (src line 186)


state 50
	statement:  add_columns statement_terminal.    (10)

	.  reduce 10 (src line 190)


state 51
	statement:  drop_columns statement_terminal.    (11)

	.  reduce 11 (src line 194)


state 52
	statement:  rename_column statement_terminal.    (12)

	.  reduce 12 (src line 198)


state 53
	select_query:  select_entity order_by_clause.limit_clause 
	limit_clause: .    (58)

	LIMIT  shift 123
	.  reduce 58 (src line 440)

	limit_clause  goto 122

state 54
	order_by_clause:  ORDER.BY order_items 

	BY  shift 124
	.  error


state 55
	insert_query:  INSERT INTO.identifier VALUES insert_values_list 
	insert_query:  INSERT INTO.identifier '(' field_references ')' VALUES insert_values_list 
	insert_query:  INSERT INTO.identifier select_query 
	insert_query:  INSERT INTO.identifier '(' field_references ')' select_query 

	IDENTIFIER  shift 59
	.  error

	identifier  goto 125

state 56
	update_query:  UPDATE identified_tables.SET update_set_list from_clause where_clause 

	SET  shift 126
	.  error


state 57
	identified_tables:  identified_table.    (148)
	identified_tables:  identified_table.',' identified_tables 

	','  shift 127
	.  reduce 148 (src line 873)


state 58
	identified_table:  identifier.    (112)
	identified_table:  identifier.identifier 
	identified_table:  identifier.AS identifier 

	IDENTIFIER  shift 59
	AS  shift 129
	.  reduce 112 (src line 701)

	identifier  goto 128

state 59
	identifier:  IDENTIFIER.    (192)

	.  reduce 192 (src line 1095)


state 60
	delete_query:  DELETE FROM.tables where_clause 

	IDENTIFIER  shift 59
	DUAL  shift 135
	STDIN  shift 137
	'('  shift 42
	.  error

	subquery  goto 136
	identified_table  goto 132
	virtual_table  goto 133
	table  goto 131
	join  goto 134
	tables  goto 130
	identifier  goto 58

state 61
	delete_query:  DELETE identified_tables.FROM tables where_clause 

	FROM  shift 138
	.  error


state 62
	create_table:  CREATE TABLE.identifier '(' using_fields ')' 

	IDENTIFIER  shift 59
	.  error

	identifier  goto 139

state 63
	add_columns:  ALTER TABLE.identifier ADD column_default column_position 
	add_columns:  ALTER TABLE.identifier ADD '(' column_defaults ')' column_position 
	drop_columns:  ALTER TABLE.identifier DROP field_reference 
	drop_columns:  ALTER TABLE.identifier DROP '(' field_references ')' 
	rename_column:  ALTER TABLE.identifier RENAME field_reference TO identifier 

	IDENTIFIER  shift 59
	.  error

	identifier  goto 140

state 64
	variable_statement:  VAR variable_assignments.statement_terminal 
	statement_terminal: .    (225)

	';'  shift 45
	.  reduce 225 (src line 1267)

	statement_terminal  goto 141

state 65
	variable_assignments:  variable_assignment.    (207)
	variable_assignments:  variable_assignment.',' variable_assignments 

	','  shift 142
	.  reduce 207 (src line 1179)


state 66
	variable_assignment:  VARIABLE.    (205)
	variable_assignment:  VARIABLE.SUBSTITUTION_OP value 

	SUBSTITUTION_OP  shift 143
	.  reduce 205 (src line 1169)


state 67
	variable_statement:  variable_substitution statement_terminal.    (21)

	.  reduce 21 (src line 238)


state 68
	transaction_statement:  COMMIT statement_terminal.    (22)

	.  reduce 22 (src line 243)


state 69
	transaction_statement:  ROLLBACK statement_terminal.    (23)

	.  reduce 23 (src line 248)


state 70
	cursor_statement:  DECLARE identifier.CURSOR FOR select_query statement_terminal 

	CURSOR  shift 144
	.  error


state 71
	cursor_statement:  OPEN identifier.statement_terminal 
	statement_terminal: .    (225)

	';'  shift 45
	.  reduce 225 (src line 1267)

	statement_terminal  goto 145

state 72
	cursor_statement:  CLOSE identifier.statement_terminal 
	statement_terminal: .    (225)

	';'  shift 45
	.  reduce 225 (src line 1267)

	statement_terminal  goto 146

state 73
	cursor_statement:  DISPOSE identifier.statement_terminal 
	statement_terminal: .    (225)

	';'  shift 45
	.  reduce 225 (src line 1267)

	statement_terminal  goto 147

state 74
	cursor_statement:  FETCH identifier.INTO variables statement_terminal 

	INTO  shift 148
	.  error


state 75
	flow_control_statement:  IF value.THEN program else END IF statement_terminal 
	flow_control_statement:  IF value.THEN program elseif else END IF statement_terminal 
	string_operation:  value.STRING_OP value 
	comparison:  value.COMPARISON_OP value 
	comparison:  value.'=' value 
	comparison:  value.IS negation ternary 
	comparison:  value.IS negation null 
	comparison:  value.negation BETWEEN value AND value 
	comparison:  value.negation IN '(' values ')' 
	comparison:  value.negation IN subquery 
	comparison:  value.negation LIKE value 
	comparison:  value.comparison_operator ANY subquery 
	comparison:  value.comparison_operator ALL subquery 
	arithmetic:  value.'+' value 
	arithmetic:  value.'-' value 
	arithmetic:  value.'*' value 
	arithmetic:  value.'/' value 
	arithmetic:  value.'%' value 
	logic:  value.OR value 
	logic:  value.AND value 
	negation: .    (211)

	AND  shift 162
	OR  shift 161
	NOT  shift 163
	IS  shift 153
	THEN  shift 149
	COMPARISON_OP  shift 151
	STRING_OP  shift 150
	'='  shift 152
	'+'  shift 156
	'-'  shift 157
	'*'  shift 158
	'/'  shift 159
	'%'  shift 160
	.  reduce 211 (src line 1199)

	negation  goto 154
	comparison_operator  goto 155

state 76
	value:  field_reference.    (68)

	.  reduce 68 (src line 486)


state 77
	value:  primary.    (69)

	.  reduce 69 (src line 491)


state 78
	value:  arithmetic.    (70)

	.  reduce 70 (src line 495)


state 79
	value:  string_operation.    (71)

	.  reduce 71 (src line 499)


state 80
	value:  subquery.    (72)

	.  reduce 72 (src line 503)


state 81
	value:  function.    (73)

	.  reduce 73 (src line 507)


state 82
	value:  case.    (74)

	.  reduce 74 (src line 511)


state 83
	value:  comparison.    (75)

	.  reduce 75 (src line 515)


state 84
	value:  logic.    (76)

	.  reduce 76 (src line 519)


state 85
	value:  variable.    (77)
	variable_substitution:  variable.SUBSTITUTION_OP value 

	SUBSTITUTION_OP  shift 118
	.  reduce 77 (src line 523)


state 86
	value:  variable_substitution.    (78)

	.  reduce 78 (src line 527)


state 87
	value:  '('.value ')' 
	subquery:  '('.select_query ')' 

	IDENTIFIER  shift 59
	STRING  shift 99
	INTEGER  shift 100
	FLOAT  shift 102
	TERNARY  shift 103
	DATETIME  shift 104
	VARIABLE  shift 41
	SELECT  shift 39
	EXISTS  shift 97
	NOT  shift 98
	NULL  shift 105
	CASE  shift 96
	GROUP_CONCAT  shift 106
	'-'  shift 101
	'('  shift 87
	.  error

	select_query  goto 121
	select_entity  goto 16
	select_set_entity  goto 37
	select_clause  goto 36
	primary  goto 77
	field_reference  goto 76
	value  goto 164
	subquery  goto 165
	string_operation  goto 79
	comparison  goto 83
	arithmetic  goto 78
	logic  goto 84
	function  goto 81
	group_concat  goto 95
	case  goto 82
	identifier  goto 88
	text  goto 89
	integer  goto 90
	float  goto 91
	ternary  goto 92
	datetime  goto 93
	null  goto 94
	variable  goto 85
	variable_substitution  goto 86

88: shift/reduce conflict (shift 167(0), red'n 66(0)) on '('
state 88
	field_reference:  identifier.    (66)
	field_reference:  identifier.'.' identifier 
	function:  identifier.'(' option ')' 

	'.'  shift 166
	'('  shift 167
	.  reduce 66 (src line 476)


state 89
	primary:  text.    (60)

	.  reduce 60 (src line 450)


state 90
	primary:  integer.    (61)

	.  reduce 61 (src line 455)


state 91
	primary:  float.    (62)

	.  reduce 62 (src line 459)


state 92
	primary:  ternary.    (63)

	.  reduce 63 (src line 463)


state 93
	primary:  datetime.    (64)

	.  reduce 64 (src line 467)


state 94
	primary:  null.    (65)

	.  reduce 65 (src line 471)


state 95
	function:  group_concat.    (106)

	.  reduce 106 (src line 672)


state 96
	case:  CASE.case_value case_when case_else END 
	case_value: .    (136)

	IDENTIFIER  shift 59
	STRING  shift 99
	INTEGER  shift 100
	FLOAT  shift 102
	TERNARY  shift 103
	DATETIME  shift 104
	VARIABLE  shift 41
	EXISTS  shift 97
	NOT  shift 98
	NULL  shift 105
	CASE  shift 96
	GROUP_CONCAT  shift 106
	'-'  shift 101
	'('  shift 87
	.  reduce 136 (src line 813)

	primary  goto 77
	field_reference  goto 76
	value  goto 169
	subquery  goto 80
	string_operation  goto 79
	comparison  goto 83
	arithmetic  goto 78
	logic  goto 84
	function  goto 81
	group_concat  goto 95
	case  goto 82
	case_value  goto 168
	identifier  goto 88
	text  goto 89
	integer  goto 90
	float  goto 91
	ternary  goto 92
	datetime  goto 93
	null  goto 94
	variable  goto 85
	variable_substitution  goto 86

state 97
	comparison:  EXISTS.subquery 

	'('  shift 42
	.  error

	subquery  goto 170

state 98
	logic:  NOT.value 

	IDENTIFIER  shift 59
	STRING  shift 99
	INTEGER  shift 100
	FLOAT  shift 102
	TERNARY  shift 103
	DATETIME  shift 104
	VARIABLE  shift 41
	EXISTS  shift 97
	NOT  shift 98
	NULL  shift 105
	CASE  shift 96
	GROUP_CONCAT  shift 106
	'-'  shift 101
	'('  shift 87
	.  error

	primary  goto 77
	field_reference  goto 76
	value  goto 171
	subquery  goto 80
	string_operation  goto 79
	comparison  goto 83
	arithmetic  goto 78
	logic  goto 84
	function  goto 81
	group_concat  goto 95
	case  goto 82
	identifier  goto 88
	text  goto 89
	integer  goto 90
	float  goto 91
	ternary  goto 92
	datetime  goto 93
	null  goto 94
	variable  goto 85
	variable_substitution  goto 86

state 99
	text:  STRING.    (193)

	.  reduce 193 (src line 1101)


state 100
	integer:  INTEGER.    (194)

	.  reduce 194 (src line 1107)


state 101
	integer:  '-'.integer 
	float:  '-'.float 

	INTEGER  shift 100
	FLOAT  shift 102
	'-'  shift 101
	.  error

	integer  goto 172
	float  goto 173

state 102
	float:  FLOAT.    (196)

	.  reduce 196 (src line 1118)


state 103
	ternary:  TERNARY.    (198)

	.  reduce 198 (src line 1129)


state 104
	datetime:  DATETIME.    (199)

	.  reduce 199 (src line 1135)


state 105
	null:  NULL.    (200)

	.  reduce 200 (src line 1141)


state 106
	group_concat:  GROUP_CONCAT.'(' option order_by_clause ')' 
	group_concat:  GROUP_CONCAT.'(' option order_by_clause SEPARATOR STRING ')' 

	'('  shift 174
	.  error


state 107
	flow_control_statement:  WHILE value.DO in_loop_program END WHILE statement_terminal 
	string_operation:  value.STRING_OP value 
	comparison:  value.COMPARISON_OP value 
	comparison:  value.'=' value 
	comparison:  value.IS negation ternary 
	comparison:  value.IS negation null 
	comparison:  value.negation BETWEEN value AND value 
	comparison:  value.negation IN '(' values ')' 
	comparison:  value.negation IN subquery 
	comparison:  value.negation LIKE value 
	comparison:  value.comparison_operator ANY subquery 
	comparison:  value.comparison_operator ALL subquery 
	arithmetic:  value.'+' value 
	arithmetic:  value.'-' value 
	arithmetic:  value.'*' value 
	arithmetic:  value.'/' value 
	arithmetic:  value.'%' value 
	logic:  value.OR value 
	logic:  value.AND value 
	negation: .    (211)

	AND  shift 162
	OR  shift 161
	NOT  shift 163
	IS  shift 153
	DO  shift 175
	COMPARISON_OP  shift 151
	STRING_OP  shift 150
	'='  shift 152
	'+'  shift 156
	'-'  shift 157
	'*'  shift 158
	'/'  shift 159
	'%'  shift 160
	.  reduce 211 (src line 1199)

	negation  goto 154
	comparison_operator  goto 155

state 108
	flow_control_statement:  WHILE variables.IN identifier DO in_loop_program END WHILE statement_terminal 

	IN  shift 176
	.  error


 109: reduce/reduce conflict  (red'ns 77 and 202) on IN
state 109
	value:  variable.    (77)
	variables:  variable.    (202)
	variables:  variable.',' variables 
	variable_substitution:  variable.SUBSTITUTION_OP value 

	SUBSTITUTION_OP  shift 118
	','  shift 177
	.  reduce 77 (src line 523)


state 110
	flow_control_statement:  EXIT statement_terminal.    (33)

	.  reduce 33 (src line 292)


state 111
	command_statement:  SET FLAG.'=' primary statement_terminal 

	'='  shift 178
	.  error


state 112
	command_statement:  PRINT value.statement_terminal 
	string_operation:  value.STRING_OP value 
	comparison:  value.COMPARISON_OP value 
	comparison:  value.'=' value 
	comparison:  value.IS negation ternary 
	comparison:  value.IS negation null 
	comparison:  value.negation BETWEEN value AND value 
	comparison:  value.negation IN '(' values ')' 
	comparison:  value.negation IN subquery 
	comparison:  value.negation LIKE value 
	comparison:  value.comparison_operator ANY subquery 
	comparison:  value.comparison_operator ALL subquery 
	arithmetic:  value.'+' value 
	arithmetic:  value.'-' value 
	arithmetic:  value.'*' value 
	arithmetic:  value.'/' value 
	arithmetic:  value.'%' value 
	logic:  value.OR value 
	logic:  value.AND value 
	statement_terminal: .    (225)
	negation: .    (211)

	IN  reduce 211 (src line 1199)
	AND  shift 162
	OR  shift 161
	NOT  shift 163
	BETWEEN  reduce 211 (src line 1199)
	LIKE  reduce 211 (src line 1199)
	IS  shift 153
	COMPARISON_OP  shift 151
	STRING_OP  shift 150
	'='  shift 152
	'+'  shift 156
	'-'  shift 157
	'*'  shift 158
	'/'  shift 159
	'%'  shift 160
	';'  shift 45
	.  reduce 225 (src line 1267)

	negation  goto 154
	comparison_operator  goto 155
	statement_terminal  goto 179

state 113
	select_entity:  select_clause from_clause.where_clause group_by_clause having_clause 
	where_clause: .    (50)

	WHERE  shift 181
	.  reduce 50 (src line 400)

	where_clause  goto 180

state 114
	from_clause:  FROM.tables 

	IDENTIFIER  shift 59
	DUAL  shift 135
	STDIN  shift 137
	'('  shift 42
	.  error

	subquery  goto 136
	identified_table  goto 132
	virtual_table  goto 133
	table  goto 131
	join  goto 134
	tables  goto 182
	identifier  goto 58

state 115
	select_entity:  select_set_entity UNION.all select_set_entity 
	all: .    (221)

	ALL  shift 184
	.  reduce 221 (src line 1247)

	all  goto 183

state 116
	select_entity:  select_set_entity INTERSECT.all select_set_entity 
	all: .    (221)

	ALL  shift 184
	.  reduce 221 (src line 1247)

	all  goto 185

state 117
	select_entity:  select_set_entity EXCEPT.all select_set_entity 
	all: .    (221)

	ALL  shift 184
	.  reduce 221 (src line 1247)

	all  goto 186

state 118
	variable_substitution:  variable SUBSTITUTION_OP.value 

	IDENTIFIER  shift 59
	STRING  shift 99
	INTEGER  shift 100
	FLOAT  shift 102
	TERNARY  shift 103
	DATETIME  shift 104
	VARIABLE  shift 41
	EXISTS  shift 97
	NOT  shift 98
	NULL  shift 105
	CASE  shift 96
	GROUP_CONCAT  shift 106
	'-'  shift 101
	'('  shift 87
	.  error

	primary  goto 77
	field_reference  goto 76
	value  goto 187
	subquery  goto 80
	string_operation  goto 79
	comparison  goto 83
	arithmetic  goto 78
	logic  goto 84
	function  goto 81
	group_concat  goto 95
	case  goto 82
	identifier  goto 88
	text  goto 89
	integer  goto 90
	float  goto 91
	ternary  goto 92
	datetime  goto 93
	null  goto 94
	variable  goto 85
	variable_substitution  goto 86

state 119
	select_clause:  SELECT distinct.fields 

	IDENTIFIER  shift 59
	STRING  shift 99
	INTEGER  shift 100
	FLOAT  shift 102
	TERNARY  shift 103
	DATETIME  shift 104
	VARIABLE  shift 41
	EXISTS  shift 97
	NOT  shift 98
	NULL  shift 105
	CASE  shift 96
	GROUP_CONCAT  shift 106
	'-'  shift 101
	'*'  shift 192
	'('  shift 87
	.  error

	primary  goto 77
	field_reference  goto 76
	value  goto 191
	subquery  goto 80
	string_operation  goto 79
	comparison  goto 83
	arithmetic  goto 78
	logic  goto 84
	function  goto 81
	group_concat  goto 95
	field_object  goto 190
	field  goto 189
	case  goto 82
	fields  goto 188
	identifier  goto 88
	text  goto 89
	integer  goto 90
	float  goto 91
	ternary  goto 92
	datetime  goto 93
	null  goto 94
	variable  goto 85
	variable_substitution  goto 86

state 120
	distinct:  DISTINCT.    (210)

	.  reduce 210 (src line 1194)


state 121
	subquery:  '(' select_query.')' 

	')'  shift 193
	.  error


state 122
	select_query:  select_entity order_by_clause limit_clause.    (40)

	.  reduce 40 (src line 325)


state 123
	limit_clause:  LIMIT.integer 

	INTEGER  shift 100
	'-'  shift 195
	.  error

	integer  goto 194

state 124
	order_by_clause:  ORDER BY.order_items 

	IDENTIFIER  shift 59
	STRING  shift 99
	INTEGER  shift 100
	FLOAT  shift 102
	TERNARY  shift 103
	DATETIME  shift 104
	VARIABLE  shift 41
	EXISTS  shift 97
	NOT  shift 98
	NULL  shift 105
	CASE  shift 96
	GROUP_CONCAT  shift 106
	'-'  shift 101
	'('  shift 87
	.  error

	primary  goto 77
	field_reference  goto 76
	value  goto 198
	order_item  goto 197
	subquery  goto 80
	string_operation  goto 79
	comparison  goto 83
	arithmetic  goto 78
	logic  goto 84
	function  goto 81
	group_concat  goto 95
	case  goto 82
	order_items  goto 196
	identifier  goto 88
	text  goto 89
	integer  goto 90
	float  goto 91
	ternary  goto 92
	datetime  goto 93
	null  goto 94
	variable  goto 85
	variable_substitution  goto 86

state 125
	insert_query:  INSERT INTO identifier.VALUES insert_values_list 
	insert_query:  INSERT INTO identifier.'(' field_references ')' VALUES insert_values_list 
	insert_query:  INSERT INTO identifier.select_query 
	insert_query:  INSERT INTO identifier.'(' field_references ')' select_query 

	SELECT  shift 39
	VALUES  shift 199
	'('  shift 200
	.  error

	select_query  goto 201
	select_entity  goto 16
	select_set_entity  goto 37
	select_clause  goto 36
	subquery  goto 40

state 126
	update_query:  UPDATE identified_tables SET.update_set_list from_clause where_clause 

	IDENTIFIER  shift 59
	.  error

	field_reference  goto 204
	update_set  goto 203
	update_set_list  goto 202
	identifier  goto 205

state 127
	identified_tables:  identified_table ','.identified_tables 

	IDENTIFIER  shift 59
	.  error

	identified_table  goto 57
	identified_tables  goto 206
	identifier  goto 58

state 128
	identified_table:  identifier identifier.    (113)

	.  reduce 113 (src line 706)


state 129
	identified_table:  identifier AS.identifier 

	IDENTIFIER  shift 59
	.  error

	identifier  goto 207

state 130
	delete_query:  DELETE FROM tables.where_clause 
	where_clause: .    (50)

	WHERE  shift 181
	.  reduce 50 (src line 400)

	where_clause  goto 208

 131: reduce/reduce conflict  (red'ns 213 and 217) on JOIN
state 131
	join:  table.join_inner JOIN table join_condition 
	join:  table.NATURAL join_inner JOIN table 
	join:  table.join_direction join_outer JOIN table join_condition 
	join:  table.NATURAL join_direction join_outer JOIN table 
	join:  table.CROSS JOIN table 
	tables:  table.    (146)
	tables:  table.',' tables 
	join_inner: .    (213)
	join_direction: .    (217)

	JOIN  reduce 213 (src line 1209)
	INNER  shift 214
	OUTER  reduce 217 (src line 1229)
	LEFT  shift 215
	RIGHT  shift 216
	FULL  shift 217
	CROSS  shift 212
	NATURAL  shift 210
	','  shift 213
	.  reduce 146 (src line 863)
